100% Complete - Giovani Garfias

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,21 +1,60 @@
 .home {
+  .header-section{
+    width: 100%;
+    border-bottom: 2px dashed @navigation-border;
+
+    img {
+      .custom-margins(2rem, -3rem);
+    }
+
+    h1{
+      .custom-margins(1rem, 0rem);
+        @media @mobile {
+          margin-left: 3%;
+        }
+    }
+    p{
+      .custom-margins(1rem, 0rem);
+      @media @mobile {
+        margin-left: 3%;
+      }
+    }
+  }
+
 
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    
+    @media @mobile {
+      margin: 30px 0;
+      display: flex; 
+      flex-flow: column wrap;
+      margin-bottom: 19px;
+      margin-left: 0%;
+    }
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: 100%;
+        padding-left: 3%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        width: 100%;
+        padding-left: 3%;
+      }
 
       img {
         border-radius: 10px;
@@ -27,20 +66,38 @@
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
+    @media @mobile{
+      display: flex;
+      flex-flow: column-reverse;
+    }
+
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+
+      @media @mobile {
+        padding-left: 3%
+      }
     }
 
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+
+      @media @mobile {
+        padding-left: 3%;
+      }
     }
   }
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+
+    @media @mobile {
+    width: 100%;
+    margin: 0 auto 30px;
+  }
 
     img {
       border-radius: 10px;
@@ -53,9 +110,33 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+    padding-top: 30px;
+    border-top: 2px dashed #C0C0C0;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: column wrap;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      
+      @media @mobile {
+        width: 70%;
+        margin-bottom: 30px;
+        margin-left: 16.5%;
+      }
+
+      .btn {
+        .custom-btn();
+        @media @mobile {
+          background-color: #17A2B8; 
+          width: 96%;
+          justify-content: center;
+        }
+      }
     }
   }
 }// home
+
