--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,12 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+// Font Sizes
+@nav-a-size: 16px;
+
+// Font Size assignments
+@nav-text:@nav-a-size;
+
+//@media
+@mobile: ~"(max-width: 500px)";
