--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,381 @@
-/* LESS needs to be processed */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+html,
+body {
+  font-family: 'Roboto', sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Indie Flower', cursive;
+}
+h1 {
+  font-size: 4rem;
+}
+h2 {
+  font-size: 3.2rem;
+  padding-bottom: 10px;
+}
+h4 {
+  font-size: 2.5rem;
+  padding-bottom: 10px;
+}
+p {
+  line-height: 1.5;
+  font-size: 1.6rem;
+  padding-bottom: 10px;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+.container {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 2rem;
+}
+@media (max-width: 500px) {
+  .navbar {
+    display: block;
+  }
+}
+@media (max-width: 500px) {
+  .navbar h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+}
+.navbar ul {
+  display: flex;
+}
+@media (max-width: 500px) {
+  .navbar ul {
+    display: flex;
+    justify-content: center;
+  }
+}
+.navbar li {
+  margin-left: 3rem;
+}
+@media (max-width: 500px) {
+  .navbar li {
+    margin-left: 0rem;
+  }
+}
+.navbar a {
+  display: flex;
+  text-decoration: none;
+  color: #212529;
+  font-size: 16px;
+}
+@media (max-width: 500px) {
+  .navbar a {
+    margin-left: 7rem;
+    position: relative;
+    right: 4rem;
+  }
+}
+.footer {
+  width: 100%;
+  border-top: 2px dashed silver;
+  background: #FFEBCD;
+}
+.footer p {
+  text-align: center;
+  color: #212529;
+  font-size: 1.6rem;
+  padding: 20px;
+}
+.home .header-section {
+  width: 100%;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home .header-section img {
+  margin-bottom: 2rem;
+  margin-top: -3rem;
+}
+.home .header-section h1 {
+  margin-bottom: 1rem;
+  margin-top: 0rem;
+}
+@media (max-width: 500px) {
+  .home .header-section h1 {
+    margin-left: 3%;
+  }
+}
+.home .header-section p {
+  margin-bottom: 1rem;
+  margin-top: 0rem;
+}
+@media (max-width: 500px) {
+  .home .header-section p {
+    margin-left: 3%;
+  }
+}
+.home .content-section {
+  margin: 30px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .home .content-section {
+    margin: 30px 0;
+    display: flex;
+    flex-flow: column wrap;
+    margin-bottom: 19px;
+    margin-left: 0%;
+  }
+}
+.home .content-section .text-content {
+  width: 48%;
+  padding-right: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+    padding-left: 3%;
+  }
+}
+.home .content-section .img-content {
+  width: 48%;
+  padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding-left: 3%;
+  }
+}
+.home .content-section .img-content img {
+  border-radius: 10px;
+}
+.home .inverse-content {
+  padding-bottom: 30px;
+  border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    display: flex;
+    flex-flow: column-reverse;
+  }
+}
+.home .inverse-content .text-content {
+  padding-left: 1%;
+  padding-right: 0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content .text-content {
+    padding-left: 3%;
+  }
+}
+.home .inverse-content .img-content {
+  padding-right: 1%;
+  padding-left: 0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content .img-content {
+    padding-left: 3%;
+  }
+}
+.home .content-destination {
+  width: 75%;
+  margin: 0 auto 30px;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+    margin: 0 auto 30px;
+  }
+}
+.home .content-destination img {
+  border-radius: 10px;
+}
+.home .content-pick {
+  padding-top: 30px;
+  border-top: 2px dashed #C0C0C0;
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .home .content-pick {
+    padding-top: 30px;
+    border-top: 2px dashed #C0C0C0;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: column wrap;
+  }
+}
+.home .content-pick .destination {
+  width: 30%;
+  margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 70%;
+    margin-bottom: 30px;
+    margin-left: 16.5%;
+  }
+}
+.home .content-pick .destination .btn {
+  background-color: #17A2B8;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  display: inline-block;
+  padding: 13px;
+  text-align: center;
+  font-size: 18px;
+  cursor: pointer;
+  width: 80%;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    background-color: #17A2B8;
+    width: 96%;
+    justify-content: center;
+  }
+}
