--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,18 @@
 // Mixins in here
+.custom-margins(@margin-bottom,@margin-top){
+    margin-bottom: @margin-bottom;
+    margin-top: @margin-top;
+}
+
+.custom-btn(){
+    background-color: @button-bg;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    display: inline-block;
+    padding: 13px;
+    text-align: center;
+    font-size: 18px;
+    cursor: pointer;
+    width: 80%;
+}
